--- a/_config.yml
+++ b/_config.yml
@@ -38,14 +38,14 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#9CC1F1"
-navbar-text-col: "#181C2D"
-navbar-children-col: "#9CC1F1"
+navbar-col: "#181C2D"
+navbar-text-col: "#FFFFFF"
+navbar-children-col: "#181C2D"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#9CC1F1"
-footer-text-col: "#777777"
+footer-col: "#181C2D"
+footer-text-col: "#FFFFFF"
 footer-link-col: "#181C2D"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
