--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ navbar-col: "#181C2D"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#181C2D"
 page-col: "#FFFFFF"
-link-col: "#008AFF"
-hover-col: "#0085A1"
+link-col: "#83B4F3"
+hover-col: "#83B4F3"
 footer-col: "#181C2D"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#181C2D"
